src/tests/fail-no-space-after-plus.err
Fatal error: exception Eqeq.Error("line 6 (char 20): '+1'")
